[ADD] - Implement multilingual support with dynamic language switching; integrate translation API, update HTML structure, and enhance styles for language switcher functionality.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,8 @@ jobs:
           cat js/lazyLoad.js | tr -d '\n' | sed 's/  */ /g' > js/lazyLoad.min.js
           cat js/navigation.js | tr -d '\n' | sed 's/  */ /g' > js/navigation.min.js
           cat js/recipeLoader.js | tr -d '\n' | sed 's/  */ /g' > js/recipeLoader.min.js
-          echo "✅ JS minified: searchRecipes.min.js, lazyLoad.min.js, navigation.min.js, recipeLoader.min.js"
+          cat js/i18n.js | tr -d '\n' | sed 's/  */ /g' > js/i18n.min.js
+          echo "✅ JS minified: searchRecipes.min.js, lazyLoad.min.js, navigation.min.js, recipeLoader.min.js, i18n.min.js"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
